# raspi-camera-server

./: CMakeLists.txt  inputplugininterface.h  main.cpp  server.cpp  server.h  serverapp.cpp  serverapp.h
plugins/: raspicaminputplugin.cpp  raspicaminputplugin.h
